simple-kbs/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-kbs-db
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    app: simple-kbs-db
