simple-kbs/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-kbs-service
spec:
  ports:
    - name: "44444"
      port: 44444
      targetPort: 44444
  selector:
    app: simple-kbs-server
