simple-kbs/simple-kbs-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: simple-kbs-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network: simple-kbs-default
  podSelector:
    matchLabels:
      network: simple-kbs-default
